--- a/rider-examples/dbunit-tomee-appcomposer-sample/pom.xml
+++ b/rider-examples/dbunit-tomee-appcomposer-sample/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.4.1-SNAPSHOT</version>
+        <version>1.5.0</version>
     </parent>
 
     <artifactId>dbunit-tomee-appcomposer-sample</artifactId>
