--- a/rider-cucumber/pom.xml
+++ b/rider-cucumber/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
-  	     <version>1.5.1</version>
+  	     <version>1.5.2-SNAPSHOT</version>
     </parent>
     
     <artifactId>rider-cucumber</artifactId>
@@ -62,7 +62,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
