--- a/rider-examples/jpa-productivity-boosters/pom.xml
+++ b/rider-examples/jpa-productivity-boosters/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>jpa-productivity-boosters</artifactId>
