--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -91,8 +91,11 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.19.1</version>
                 <configuration>
+                    <parallel>classes</parallel>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
+                    <reuseForks>false</reuseForks>
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*It.java</include>
@@ -103,7 +106,7 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.3.2</version>
+                        <version>1.0.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
