--- a/rider-core/pom.xml
+++ b/rider-core/pom.xml
@@ -271,6 +271,29 @@
                 <docs.outputdir>docs/${project.version}</docs.outputdir>
             </properties>
         </profile>
+        <profile>
+            <!--runs rider core tests on jdk11-->
+            <id>jdk11</id>
+             <build>
+                 <plugins>
+                     <plugin>
+                         <groupId>org.apache.maven.plugins</groupId>
+                         <artifactId>maven-surefire-plugin</artifactId>
+                         <version>3.0.0-M3</version>
+                         <configuration>
+                             <parallel>classes</parallel>
+                             <useUnlimitedThreads>true</useUnlimitedThreads>
+                             <reuseForks>false</reuseForks>
+                             <includes>
+                                 <include>**/*It.java</include>
+                                 <include>**/*Test.java</include>
+                                 <include>**/*Bdd.java</include>
+                             </includes>
+                         </configuration>
+                     </plugin>
+                 </plugins>
+             </build>
+        </profile>
     </profiles>
 
 </project>
