--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>quarkus-dbunit</name>
     <!--<parent> //doesn not work, test hangs
@@ -11,7 +9,7 @@
     </parent>-->
      <groupId>com.github.database-rider</groupId>
      <artifactId>rider-quarkus-sample</artifactId>
-     <version>1.7.2-SNAPSHOT</version>
+     <version>1.7.2</version>
 
      <properties>
         <quarkus.version>0.16.1</quarkus.version>
