--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -3,10 +3,12 @@ cacheTableNames: false
 leakHunter: true
 properties:
   batchedStatements:  true
+  caseSensitiveTableNames: true
   qualifiedTableNames: true
   batchSize: 200
   fetchSize: 200
   allowEmptyFields: true
   escapePattern: "[?]"
-  datatypeFactory: !!com.github.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {}
+  datatypeFactory: !!com.gith
+ub.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {}
   replacers: [!!com.github.database.rider.core.replacers.CustomReplacer {}]
