--- a/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
+++ b/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
@@ -53,7 +53,6 @@
             <scope>test</scope>
         </dependency>
 
-
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -122,6 +121,20 @@
                         </goals>
                     </execution>
                 </executions>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>jakarta.xml.bind</groupId>
+                        <artifactId>jakarta.xml.bind-api</artifactId>
+                        <version>2.3.2</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>jaxb-impl</artifactId>
+                        <version>2.1.2</version>
+                    </dependency>
+                </dependencies>
 
                 <configuration>
                     <jdbc>
