--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- test -->
