--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -196,6 +197,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>7</source>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
