--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -71,6 +71,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>5.2.0.RELEASE</version>
             <scope>provided</scope>
