--- a/rider-spring/pom.xml
+++ b/rider-spring/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
-        <version>1.8.2-SNAPSHOT</version>
+        <version>1.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rider-spring</artifactId>
@@ -56,8 +56,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -73,7 +73,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>7</source>
+                    <source>8</source>
                 </configuration>
             </plugin>
 
