--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -12,7 +12,7 @@
      <version>1.9.1-SNAPSHOT</version>
 
      <properties>
-        <quarkus.version>1.1.0.CR1</quarkus.version>
+        <quarkus.version>1.0.1.Final</quarkus.version>
         <surefire.version>2.22.0</surefire.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
