--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -9,7 +9,7 @@
     </parent>-->
      <groupId>com.github.database-rider</groupId>
      <artifactId>rider-quarkus-sample</artifactId>
-     <version>1.10.0</version>
+     <version>1.10.1-SNAPSHOT</version>
 
      <properties>
         <quarkus.version>1.0.1.Final</quarkus.version>
