--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>quarkus-dbunit</name>
-    <!--<parent> //doesn not work, test hangs
+    <parent>
         <groupId>com.github.database-rider</groupId>
-        <artifactId>rider-parent</artifactId>
-        <version>1.7.2-SNAPSHOT</version>
-    </parent>-->
-     <groupId>com.github.database-rider</groupId>
+        <artifactId>rider-examples</artifactId>
+        <version>1.10.1-SNAPSHOT</version>
+    </parent>
+
      <artifactId>rider-quarkus-sample</artifactId>
-     <version>1.10.1-SNAPSHOT</version>
 
      <properties>
-        <quarkus.version>1.0.1.Final</quarkus.version>
+        <quarkus.version>1.1.1.Final</quarkus.version>
         <surefire.version>2.22.0</surefire.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
